crates/ars-components/src/overlay/snapshots/ars_components__overlay__presence__tests__presence_root_unmount_pending.snap
---
source: crates/ars-components/src/overlay/presence.rs
assertion_line: 551
expression: "snapshot_attrs(&service.connect(&|_| {}).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-presence",
            ),
            String(
                "exiting",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "presence",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "closed",
            ),
        ),
    ],
    styles: [],
}
